--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="text_project">体系</string>
     <string name="text_mine">我的</string>
     <string name="text_search_tips">输入关键词</string>
-    <string name="looper_view_title">这里是标题</string>
+    <string name="looper_view_title">-</string>
     <string name="text_wx">公众号</string>
     <string name="text_navigation">导航</string>
     <string name="text_search_history">搜索历史</string>
